Added limits to video file size, video duration and updated swagger and READ
