# swagger.json
@@ -100,6 +100,12 @@
                             "$ref": "#/definitions/File"
                         }
                     },
+                    "413": {
+                        "description": "File too large"
+                    },
+                    "416": {
+                        "description": "Video duration out of range"
+                    },
                     "415": {
                         "description": "Invalid file format"
                     }
